# ToothPaste

./: .gitignore  .gitmodules  .prettierignore  README.md  experimental.md  index.html  package-lock.json  package.json  planMcp.md  platformio.ini  sdkconfig  sdkconfig.old  tailwind.config.js  vite.config.js
.claude/: settings.local.json
.github/: FUNDING.yml
.github/instructions/: toothpaste-mcp.instructions.md
.github/workflows/: deploy.yml  firmware-release.yml
client/core/: BLEManager.js  DeviceState.js  EventEmitter.js  HIDKeyMap.js  PacketHandler.js  SessionManager.js  index.js
client/electron/: main.js  package.json  preload.js  types.js
client/web/: electron.vite.config.js  package-lock.json  package.json  vite.config.js
components/IDF_USB/: IDFHID.cpp  IDFHID.h  IDFHIDKeyboard.cpp  IDFHIDKeyboard.h  IDFHIDMouse.cpp  IDFHIDMouse.h
components/SecureSession/: CMakeLists.txt  SecureSession.cpp  SecureSession.h
components/ble/: CMakeLists.txt  ble.cpp  ble.h
components/espHID/: CMakeLists.txt  espHID.cpp  espHID.h  tudconfig.cpp
components/hwUI/: CMakeLists.txt
components/rgbRMT/: CMakeLists.txt  NeoPixelRMT.h
components/serialDebug/: SerialDebug.h
components/stateManager/: CMakeLists.txt  StateManager.cpp
components/toothPacket/: toothpacket.pb.c  toothpacket.pb.h
electron/: README.md  main.js  preload.js
firmware/: .gitignore  CMakeLists.txt  README.MD  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.4mb_mbedtls  sdkconfig.defaults.4mb_mbedtls_led10  sdkconfig.defaults.4mb_mbedtls_led48  sdkconfig.defaults.8mb_atecc  sdkconfig.defaults.8mb_mbedtls  sdkconfig.old
firmware/components/SecureSession/: CMakeLists.txt  SecureSession.cpp  SecureSession.h  SlotManager.cpp  SlotManager.h
firmware/components/espHID/: CMakeLists.txt  espHID.cpp  espHID.h  tudconfig.cpp
firmware/components/fidoU2F/: ACKNOWLEDGEMENT.MD  CMakeLists.txt  fido_u2f.h
firmware/components/fidoU2F/app/: fido_glue.c  fido_glue.h  u2f_app.c  u2f_app.h  u2f_presence.cpp  u2f_presence.h  u2f_store.c  u2f_store.h
firmware/components/fidoU2F/platform/: debug.h  picokeys.h  picokeys_version.h  signal.c  signal.h
firmware/components/fidoU2F/protocol/: apdu.c  apdu.h  cbor_dispatch.c  ctap2_cbor.h  tlv.c  tlv.h
firmware/components/fidoU2F/transport/: ctap_hid.h  ctap_hid_transport.c  ctap_hid_transport.h  fido_usb_compat.c  fido_usb_compat.h
firmware/components/rgbRMT/: CMakeLists.txt  NeoPixelRMT.cpp  NeoPixelRMT.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  log_config.cpp  log_config.h  main.cpp  main.h
include/: SerialDebug.h
lib/SecureSession/: SecureSession.cpp  SecureSession.h
lib/ble/: ble.cpp  ble.h
lib/espHID/: espHID.cpp  espHID.h
lib/hwUI/: hwUI.cpp  hwUI.h
lib/rgbRMT/: Colors.h  NeoPixelRMT.cpp  NeoPixelRMT.h
lib/stateManager/: StateManager.cpp  StateManager.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  main.h
public/: index.html
shared/: toothpacket.options  toothpacket.proto
src/: App.jsx  hid.cpp  hid.h  index.css  index.js  main.cpp  main.h  main.jsx
src/components/: GridBackground.jsx
src/context/: BLEContext.js  BLEContext.jsx  ECDHContext.js  ECDHContext.jsx  PacketFunctions.js  SecurityContext.js  Storage.js
src/controllers/: HIDMap.js  LiveCaptureInput.js  (+2 more)
web/: .gitignore  electron.vite.config.js  mcp-launch.cjs  package-lock.json  package.json
(+96 files in other folders)
